--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.13.0",
+    "@tanstack/react-query": "^4.29.5",
     "autoprefixer": "10.4.14",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
