--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.13.0",
     "@tanstack/react-query": "^4.29.5",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "next": "13.3.1",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
