--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/react": "18.2.6",
     "prisma": "^4.13.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
+    "prisma:generate": "prisma generate"
   }
 }
